--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,21 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1> async and await</h1>
+    <p id="result"></p>
+    <script>
+        async function multiply (x,y) {
+            let response = await x*y;
+            display (response);
+        }
+        function display (some){
+        document.getElementById("result").inner.Html= some;
+        }
+    </script>
+</body>
+</html>
