--- a/Index.html
+++ b/Index.html
@@ -16,6 +16,7 @@
         function display (some){
         document.getElementById("result").inner.Html= some;
         }
+        multiply (7*12);
     </script>
 </body>
 </html>
